[package]
name = "rawtojpg"
edition = "2021"
version = "0.5.3"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "A very fast embedded JPEG extractor from RAW files."
repository = "https://github.com/cdown/rawtojpg"
readme = "README.md"
keywords = ["raw", "camera", "extract", "jpeg", "jpg"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"
indicatif = "0.17.8"
memmap2 = "0.9.5"
once_cell = "1.20.2"

[dependencies.clap]
version = "4.5.20"
features = ["std", "derive", "help"]
default-features = false

[dependencies.tokio]
version = "1.41.0"
features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]
default-features = false
