[package]
name = "rawtojpg"
edition = "2021"
version = "0.6.0"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "A very fast embedded JPEG extractor from RAW files."
repository = "https://github.com/cdown/rawtojpg"
readme = "README.md"
keywords = ["raw", "camera", "extract", "jpeg", "jpg"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
indicatif = "0.17.9"
memmap2 = "0.9.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Threading"]}

[dependencies.clap]
version = "4.5.26"
features = ["std", "derive", "help"]
default-features = false

[dependencies.tokio]
version = "1.43.0"
features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]
default-features = false
